# pyCANdash

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh  run_server.sh
config_files/: config_default.py  gui_config.py
data/: .gitignore  GMLAN_2025-08-01_12-03-36.blf
data/borked_files/: .gitignore
dbc/: gmlan_v1.3.dbc  gmlan_v1.4.dbc  gmlan_v1.4_decode.dbc  gmlan_v1.5.dbc  gmlan_v1.5_decode.dbc  gmlan_v1.6.dbc  gmlan_v1.6_decode.dbc  test.dbc
src/pyCANdash/: AnalogGaugeWidget.py  DTCStatusLayout.py  GaugeLayouts.py  GridStatusLayout.py  TallStatusLayout.py  __main__.py  analogGauges.py  bokeh_classes.py  config_system.py  layouts.py  utils.py  workers.py
src/pyCANdash/examples/: AnalogGaugeWidget_Demo.py  AnalogGaugeWidget_Demo2.py  bokeh_example.py  bokeh_server.py  can_log.py  decode_log.py  logMsg2file.py  loopback.py  pglive_demo.py  rx_decode.py  time_decode_msg.py  tx_can.py  tx_dummy_can.py
